[package]
name = "qemu"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tcp = ["smoltcp"]
default = ["tcp"]

[dependencies]
log = "0.4"
riscv = "0.10"
opensbi-rt = { git = "https://github.com/rcore-os/opensbi-rt.git", rev = "abdfeb72" }
fdt = "0.1.4"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
spin = "0.9"
safe-virtio-drivers = { path = "../virtio-drivers", package = "virtio-drivers"}

[dependencies.smoltcp]
version = "0.9.1"
optional = true
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp",
]
